test/semantics/programs/valid/match-defined-variable1.fav
x = 3
match x with
    3 -> print("hello")
